--- a/UmbracoTechTest/Views/MacroPartials/PrimaryNews.cshtml
+++ b/UmbracoTechTest/Views/MacroPartials/PrimaryNews.cshtml
@@ -9,7 +9,6 @@
         .OrderByDescending(x => x.CreateDate).Take(int.Parse(quantity));
 }
 
-
 <ul style="list-style: none">
     @foreach (var item in selection)
     {
@@ -22,8 +21,7 @@
         <a href="@item.Url"><img src="@mediaItem.Url" /></a>
         <span><em>@category</em></span>
         <span><a href="@item.Url"><h2>@item.Name</h2></a><em>by @author</em></span>
-        <div>@(Umbraco.Truncate(item.GetPropertyValue<string>("Summary"), 200)) <a href="@item.Url">Read More..</a></div>
+        <div>@(Umbraco.Truncate(item.GetPropertyValue<string>("Summary"), 100)) <a href="@item.Url">Read More...</a></div>
         <hr />
-
     }
 </ul>
