--- a/UmbracoTechTest/Views/NewItem/Index.cshtml
+++ b/UmbracoTechTest/Views/NewItem/Index.cshtml
@@ -21,7 +21,7 @@
             <h1 class="entry-title">
                 <a href="@newItem.Url" style="color: black">@title</a>
             </h1>
-            <h5>@category</h5>
+            <h5>@category - @Model.CreateDate.ToString("MMMM dd/yyyy")</h5>
         </div>
         <div class="entry-excerpt">
             @summary
