--- a/UmbracoTechTest/Views/AboutUs/Index.cshtml
+++ b/UmbracoTechTest/Views/AboutUs/Index.cshtml
@@ -6,7 +6,7 @@
 }
 
 <section style="margin: 0 100px">
-    <h1>Welcome to About Us</h1>
+    <h1>Welcome to @Model.Name</h1>
     @Html.GetGridHtml(Model, "gridLayoutAbout")
 </section>
 
