--- a/UmbracoTechTest/css/main.css
+++ b/UmbracoTechTest/css/main.css
@@ -1734,6 +1734,11 @@ header .logo a {
 	font-family: "montserrat-bold", sans-serif;
 }
 
+.footer-main ul li.current > a {
+    color: #000000;
+    font-family: "montserrat-bold", sans-serif;
+}
+
 .main-navigation ul {
 	position: absolute;
 	top: 100%;
